# nir-parser

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
data/: endmembers.xlsx
src/: choices.py  config.py  constants.py
src/base/: main.py  predict.py
