[project]
name = "nir-parser"
version = "1"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pysptools>=0.15.0",
    "ruff>=0.11.10",
    "scipy==1.13.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120
cache-dir = "~/.cache/ruff"

[tool.ruff.lint]
select = ['C', 'E', 'F', 'W', 'B', 'I']
ignore = ['E203', 'E501', 'F841', 'C901']

[tool.ruff.lint.isort]
force-single-line = true
